# udemy-dbt

./: .gitignore  docker-compose.yml
Dagster/: .dockerignore  Dagster-Commands.txt  Dockerfile_dagster  dagster.yaml  dg.toml  repo.py  test.py  workspace.yaml
Dagster/.telemetry/: id.yaml
Dagster/airbnb_dbt_fusion_data_bricks/: pyproject.toml  setup.py
Dagster/airbnb_dbt_fusion_data_bricks/airbnb_dbt_fusion_data_bricks/: assets.py  definitions.py  project.py  schedules.py
Dagster/dagster-airbnb-new/: pyproject.toml
Dagster/dagster-airbnb-new/.dg/: telemetry.yaml
Dagster/dagster_airbnb/: pyproject.toml  setup.py
Dagster/dagster_airbnb/dagster_airbnb/: assets.py  definitions.py  project.py  resources.py  schedules.py
Dagster/dagster_airbnb_new/: README.md  pyproject.toml
Dagster/dagster_airbnb_new/.dg/: telemetry.yaml
app/.telemetry/: id.yaml
app/history/: runs.db
app/history/runs/: index.db
app/schedules/: schedules.db
db/iniit/: dagster.sql  data_test.sql  incremental_insert_test.sql  init.sql  marquez.sql  table_creation.sql
dbt/: Dockerfile
dbt-fusion/: .user.yml  Dockerfile
dbt_project/airbnb/: .user.yml  dbt_project.yml  package-lock.yml  package.yml  profiles.yml
dbt_project/airbnb/models/: overview.md  schema.yml  sources.yml
dbt_project/airbnb_dbt_fusion_data_bricks/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml
dbt_project/airbnb_dbt_fusion_data_bricks/db/: init.sql
history/: runs.db
history/runs/: index.db
pg_dump/: marquez_dump.dump  pg_commands.txt
schedules/: schedules.db
(+38 files in other folders)
