[project]
name = "airbnb_dbt_fusion_data_bricks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dbt-core<1.12",
    "dbt-databricks<1.12",
    "dbt-databricks<1.12",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "airbnb_dbt_fusion_data_bricks.definitions"
code_location_name = "airbnb_dbt_fusion_data_bricks"